// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests Policy statements Tests services 1`] = `
{
  "Action": "comprehend:*",
  "Effect": "Allow",
  "Resource": "*",
}
`;

exports[`Tests Policy statements Tests services 2`] = `
{
  "Action": "rekognition:*",
  "Effect": "Allow",
  "Resource": "*",
}
`;

exports[`Tests Policy statements Tests services 3`] = `
{
  "Action": "textract:*",
  "Effect": "Allow",
  "Resource": "*",
}
`;

exports[`Tests Policy statements Tests services 4`] = `
{
  "Action": [
    "secretsmanager:GetSecretValue",
    "secretsmanager:ListSecrets",
  ],
  "Effect": "Allow",
  "Resource": "*",
}
`;
